--- a/style.css
+++ b/style.css
@@ -1866,6 +1866,10 @@ input[type=number]::-webkit-outer-spin-button {
 
 @media screen and (max-width: 380px) {
 
+    .header_nav_two {
+        padding-left: 60px;
+    }
+    
     .header_link{
         font-size: 18px;
         text-align: end;
